--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -4,6 +4,8 @@
       <th>Client Name</th>
       <th>Hotels</th>
       <th>Rooms</th>
+      <th> Room Facility </th>
+      <th> Room Facility Category </th>
     </tr>
   </thead>
   <tbody id="client_table" >
