--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -6,7 +6,7 @@
       <th>Rooms</th>
       <th> Room Facility </th>
       <th> Room Facility Category </th>
-      <th> Regions </th>
+      <th> Regions and Locations </th>
     </tr>
   </thead>
   <tbody id="client_table" >
