--- a/app/views/clients/locations_by_region.js.erb
+++ b/app/views/clients/locations_by_region.js.erb
@@ -1,1 +1,1 @@
-$("#location").html("<%= j options_from_collection_for_select(@locations, :id, :country) %>");
+<%= j options_from_collection_for_select(@locations, :id, :country) %>
