--- a/app/views/clients/_client_show.html.erb
+++ b/app/views/clients/_client_show.html.erb
@@ -201,24 +201,47 @@
 
       <td>
         <% if @client.regions.empty? %>
-          <%= form_tag(add_location_client_path(@client), method: :patch, remote: true) do %>
-            <%= select_tag "region_ids[]", options_from_collection_for_select(Region.all, "id", "name"), prompt: "Region", id: "region", multiple: true %>
-            <%= select_tag "location_ids[]", options_for_select(Location.all.map{|location| [location.country, location.id] }), prompt: "Location", id: "location" , multiple: true %>
-            <%= submit_tag("Add Location", class: "btn btn-primary") %>
-          <% end %>
+                  <!-- Button trigger modal -->
+          <button type="button", class="btn btn-primary", data-bs-toggle="modal", data-bs-target="#selectLocationModal">
+            Select Location
+          </button>
+
+          <!-- Modal -->
+          <div class="modal fade" id="selectLocationModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLongTitle">Select Location</h5>
+                  <button type="button" id= "closeselectForm" class="close" data-bs-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <%= form_tag(add_location_client_path(@client), method: :patch, remote: true,id: "selectForm") do %>
+                    <%= select_tag "region_ids[]", options_from_collection_for_select(Region.all, "id", "name"), prompt: "Region", id: "region", multiple: true %>
+                    <%= select_tag "location_ids[]", options_for_select(Location.all.map{|location| [location.country, location.id] }), prompt: "Location", id: "location" , multiple: true %>
+                    <%= submit_tag("Add Location", class: "btn btn-primary", id: "addLocation") %>
+                  <% end %>
+                </div>
+              </div>
+            </div>
+          </div
+
         <% else %>
-              <% @client.regions.each do |region| %>
+              <div id="regions">
+                <% @client.regions.each do |region| %>
                   <li>
                     <%= region.name %>
                   </li>
                   <ul>
                     <% region.locations.each do |location|%>
-                    <li>
-                      <%= location.country  %>
-                    </li>
-                  <%end%>
-                </ul>
-              <% end %>
+                      <li>
+                        <%= location.country  %>
+                      </li>
+                    <%end%>
+                  </ul>
+                <% end %>
+              </div>
         <%end %>
     </td>
 
