Changed locations column from country to name

--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -4,7 +4,7 @@
       <h1 class="card-title">Location Details</h1>
     </div>
     <div class="card-body">
-       <h2 class="card-subtitle mb-2 text-muted"> Country: <%= @location.country %></h2>
+       <h2 class="card-subtitle mb-2 text-muted"> Name: <%= @location.name %></h2>
        <h2 class="card-subtitle mb-2 text-muted">Region: <%= @location.region.name %></h2>
     </div>
     <div class="card-footer text-muted">
