--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -16,8 +16,8 @@
           <% end %>
           <%= form_with(model: @location, data: { remote: true}, method: :patch, id: 'edit-form' ) do |f| %>
             <div class="form-group">
-              <%= f.label :Country%>
-              <%= f.text_field :country, class: 'form-control' %>
+              <%= f.label :Name%>
+              <%= f.text_field :name, class: 'form-control' %>
             </div>
             <div class="form-group">
               <%= f.label :Region %><br/>
