--- a/app/views/locations/_location.html.erb
+++ b/app/views/locations/_location.html.erb
@@ -1,5 +1,5 @@
       <tr id="location_<%= location.id %>">
-        <td><%= location.country %></td>
+        <td><%= location.name %></td>
         <td><%= location.region.name %></td>
         <td><%= link_to 'Show', location_path(location), class: 'btn btn-primary' %></td>
         <td><%= link_to 'Edit', edit_location_path(location), data: {remote: true, bs_toggle: "modal", bs_target: "#editlocation_#{location.id}"}, class: 'btn btn-primary' %></td>
@@ -20,8 +20,8 @@
         <div id="editerrors"></div>
         <%= form_with(model: location, data: { remote: true}, method: :patch, id: 'editModal' ) do |f| %>
             <div class="form-group">
-              <%= f.label :Country%>
-              <%= f.text_field :country, class: 'form-control' %>
+              <%= f.label :Name%>
+              <%= f.text_field :name, class: 'form-control' %>
             </div>
             <div class="form-group">
               <%= f.label :Region %><br/>
