--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -3,7 +3,7 @@
 <table class="table">
   <thead>
     <tr>
-      <th>Country</th>
+      <th>Name</th>
       <th>Region</th>
       <th colspan="3"></th>
     </tr>
