--- a/app/views/clients/_newform.html.erb
+++ b/app/views/clients/_newform.html.erb
@@ -11,6 +11,14 @@
             </div>
             <%= f.hidden_field :user_id, value: current_user.id %>
             <div class="form-group">
+              <%= f.label :Region %>
+                <%= select_tag "region_ids[]", options_from_collection_for_select(Region.all, "id", "name"), prompt: "Select Region", id: "region", multiple: true %>
+            </div>
+            <div class="form-group">
+              <%= f.label :Location %>
+               <%= select_tag "location_ids[]", options_for_select([["Select Locations"]]), id: "location" , multiple: true %>     
+            </div>
+            <div class="form-group">
               <%= f.submit 'Add Client', class: 'btn btn-primary' %>
             </div>
           <% end %>
@@ -22,4 +30,5 @@
     </div>
   </div>
 </div>
+
 
