--- a/app/views/regions/index.html.erb
+++ b/app/views/regions/index.html.erb
@@ -4,8 +4,8 @@
   <thead>
     <tr>
       <th>Region Name</th>
-      <th>Client</th>
-      <th colspan="3"></th>
+
+      <th colspan="3">Actions</th>
     </tr>
   </thead>
 
