Add client modal with dynamic dropdown working fine by saving only selected regions and selected locations

--- a/app/views/clients/_client_show.html.erb
+++ b/app/views/clients/_client_show.html.erb
@@ -205,13 +205,17 @@
               <li>
               <%= region.name %>
               </li>
-                <%region.locations.each do|location|%>
-                  <ul>
-                    <%=location.name%>
-                  </ul>
-                <%end%>
             <% end %>
         <%end %>
+    </td>
+    <td>
+      <% if @client.locations.any? %>
+        <% @client.locations.each do |location| %>
+          <li>
+          <%= location.name %>
+          </li>
+        <%end%>
+      <%end %>
     </td>
 
 <!--script>
