--- a/app/views/clients/_newform.html.erb
+++ b/app/views/clients/_newform.html.erb
@@ -16,7 +16,7 @@
             </div>
             <div class="form-group">
               <%= f.label :Location %>
-               <%= select_tag "location_ids[]", options_for_select([["Select Locations"]]), id: "location" , multiple: true %>     
+               <%= select_tag "location_ids[]", options_for_select([["Select Locations"]]), id: "location_ids" , multiple: true %>     
             </div>
             <div class="form-group">
               <%= f.submit 'Add Client', class: 'btn btn-primary' %>
