--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -24,17 +24,12 @@
             </div>
             <div class="form-group">
               <%= f.label :Region %>
-              <% if client.regions.present? %>
-                <%= select_tag "region_ids[]", options_from_collection_for_select(Region.all, "id", "name"), selected: client.regions.map(&:id), id: "region-#{client.id}", multiple: true %>
-              <% else %>
-                <%= select_tag "region_ids[]", options_from_collection_for_select(Region.all, "id", "name"), id: "region-#{client.id}", multiple: true %>
-              <% end %>
+              <%= f.select :region_ids, options_from_collection_for_select( Region.all, :id, :name,selected: client.region_ids,prompt: "Select Regions"), {include_hidden: false}, {:multiple => true, :class=>"form-control", id: "region-#{client.id}" } %>
             </div>
             <div class="form-group">
               <%= f.label :Location %>
-              <%= select_tag "location_ids[]", options_for_select([["Select Locations"]]), id: "location-#{client.id}" , multiple: true %>     
+               <%= f.select :location_ids, options_for_select([["Select Locations"]],selected: client.location_ids), {include_hidden: false}, {class: "form-control" ,id: "location-#{client.id}" , multiple: true,selected: @client.locations.pluck(:id)} %>     
             </div>
-
             <div class="form-group">
               <%= f.submit 'Update Client', class: 'btn btn-primary mt-2' %>
             </div>
